--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -8,10 +8,21 @@ services:
     volumes:
       - gis_django_02_static:/data/static/
       - gis_django_02_media:/data/media/
+      - gis_log:/var/log/nginx/
       - /home/ggongjja0/nginx.conf:/etc/nginx/nginx.conf
     ports:
-      - 80:80
+      - mode: host
+        protocol: tcp
+        target: 80
+        published: 80
 
+  goaccess:
+    image: allinurl/goaccess:1.5.1
+    ports:
+      - 7890:7890
+    volumes:
+      - gis_log:/var/log/nginx/
+    command: /var/log/nginx/gis_access.log -o /var/log/nginx/report.html --log-format=COMBINED --real-time-html
   django:
     image: gis_django_02:5
     networks:
@@ -47,6 +58,7 @@ volumes:
   gis_django_02_static:
   gis_django_02_media:
   gis_mariadb:
+  gis_log:
 
 secrets:
   MARIADB_USER:
